--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -8,13 +8,14 @@
 
     <TextView
         android:id="@+id/textView_quiz_question"
-        android:layout_width="109dp"
-        android:layout_height="36dp"
+        android:layout_width="153dp"
+        android:layout_height="79dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/button_quiz_true"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
